--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   
                 <h2>Version control is...</h2>
 
-		<p>... inferior to keeping track of projects through email attachments.</p>
+		<p>Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later.
+		</br>
+		<a href="http://git-scm.com/book/en/v2/Getting-Started-About-Version-Control" target="_blank">http://git-scm.com/book/en/v2/Getting-Started-About-Version-Control</a></p>
 
                 <h2>Cloning a repository...</h2>
 
