--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2>More about open source</h2>
                 <p>Free, open source software is software that is
                 shared freely and available to build upon. It is a
-                adjective way to apply your skills to adjective projects
+                PRACTICAL way to apply your skills to COLLABORATIVE projects
                 and social causes. You can participate by writing or
                 reviewing code, answering users' questions,
                 translating the interface to another noun, making
