changed description of adding, commiting, pushing

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 		<p>... is leading us into war.  <a href="http://en.wikipedia.org/wiki/Clone_Wars_(Star_Wars)">The Clone Wars</a>, that is.</p>
 
                 <h2>"Adding", "committing" and "pushing" changes...</h2>
-
-		<p>... you just said three things that all mean the same thing.</p>
+f
+		<p>These are not the same at all! When you add changes, it is staged, and git keeps track of the changes you made.
+                        When you commit, it is locked in on git, and now you are ready to push your changes to your repository.
+                        When you push, it is being submitted to your respository, and now you can share it with the world!
+                </p>
 
                 <h2>You need to fork when...</h2>
 
