Added adjectives and nouns to the "More about open source" section

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                 PRACTICAL way to apply your skills to COLLABORATIVE projects
                 and social causes. You can participate by writing or
                 reviewing code, answering users' questions,
-                translating the interface to another noun, making
+                translating the interface to another LANGUAGE, making
                 video tutorials to help new users, and myriad other
                 ways. Open source software is often produced by lots
-                of nouns collaborating across noun and noun, and
-                this event specially welcomes nouns to that style
-                of noun.</p>
+                of VOLUNTEERS collaborating across CITIES and COUNTRIES, and
+                this event specially welcomes STUDENTS to that style
+                of CONTRIBUTIONS.</p>
 
                 <p>Open source participation is one way to gain
                 noun skills and make connections that will last
