change description again

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 		<p>... is leading us into war.  <a href="http://en.wikipedia.org/wiki/Clone_Wars_(Star_Wars)">The Clone Wars</a>, that is.</p>
 
                 <h2>"Adding", "committing" and "pushing" changes...</h2>
-f
 		<p>These are not the same at all! When you add changes, it is staged, and git keeps track of the changes you made.
-                        When you commit, it is locked in on git, and now you are ready to push your changes to your repository.
+                        When you commit, it is locked in on git, and now you are ready to push your changes to your repository. You will not be able to push until you have committed your changes. SO don't be wishy washy and commit.
                         When you push, it is being submitted to your respository, and now you can share it with the world!
                 </p>
 
