--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 		<p>These are not the same at all! When you add changes, it is staged, and git keeps track of the changes you made.
                         When you commit, it is locked in on git, and now you are ready to push your changes to your repository. You will not be able to push until you have committed your changes. SO don't be wishy washy and commit.
                         When you push, it is being submitted to your respository, and now you can share it with the world!
+
                 </p>
+                <div id="error">I love pink yayayayayay whaaaaaaaat whoooooooooooooooooooooooo scooby doobie dooo</div>
 
                 <h2>You need to fork when...</h2>
 
