--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
                         When you push, it is being submitted to your respository, and now you can share it with the world!
 
                 </p>
-                <div id="error">I love pink yayayayayay whaaaaaaaat whoooooooooooooooooooooooo scooby doobie dooo</div>
+                <div id="error">I love pink yayayayayay whaaaaaaaat whoooooooooooooooooooooooo scooby doobie dooo
+                        more
+                        errors
+                        like
+                        rowrse
+                        hehehehe
+                        ewww
+                        puppies are cute
+                </div>
 
                 <h2>You need to fork when...</h2>
 
